--- a/views/details.pug
+++ b/views/details.pug
@@ -1,13 +1,15 @@
-extends layout
-title Details
-block content
+doctype
+html
+    head
+        title Details
+    body
         p Name: #{person.name}
         p Age: #{person.age}
         p email: #{person.email}
         p Username: #{person.username}
         p password: #{person.password}
-        p User-Level: #{person.user-level}
-        p answers:#{answers}
+        p User-Level: #{person.userLevel}
+        //- p answers:#{answers}
         br
         #menu
             a(href='/') Go back
