--- a/views/create.pug
+++ b/views/create.pug
@@ -24,4 +24,6 @@ html
             label(for='userLevel') User-Level: 
             input(type='text', name='userLevel')
             br
+            br
             input(type='submit', value='Add Person') 
+        a(href="/")
