--- a/views/login.pug
+++ b/views/login.pug
@@ -10,4 +10,6 @@ block content
         input(id="password" type="password" placeholder="Enter Password" name="psw" required)
         br
         button(id="submit" type="submit") Login
+        br
+        a(href="/create") Create Account
             
