--- a/views/index.pug
+++ b/views/index.pug
@@ -1,4 +1,4 @@
-doctype
+doctype html
 html
     head
         title= title
@@ -31,6 +31,8 @@ html
                         a(href='/edit/' + item.id) Edit
                     td
                         a(href='/delete/' + item.id) Delete
+                    td
+                        a(href='/questions/' + item.id) Questions    
         p
         #menu
             a(href='/create') Add new person
