--- a/views/details.pug
+++ b/views/details.pug
@@ -10,6 +10,9 @@ html
         p Username: #{person.username}
         p password: #{person.password}
         p User-Level: #{person.userLevel}
+        p Question 1 Answer: #{person.answerQ1}
+        p Question 2 Answer: #{person.answerQ2}
+        p Question 3 Answer: #{person.answerQ3}
         //- p answers:#{answers}
         br
         #menu
