--- a/views/questions.pug
+++ b/views/questions.pug
@@ -6,29 +6,29 @@ html
     body
         h1 What color is made when you mix blue and green?
             br
-            button() Yellow
+            button(id="yellow") Yellow
             br
-            button() Magenta
+            button(id="magenta") Magenta
             br
             button(id="cyan") Cyan
             br
-            button() Red
+            button(id="red") Red
             br
         h1 Which band has a song called 1958?
             br
             button(id="adtr") A Day To Remember
             br
-            button() Beartooth
+            button(id="bear") Beartooth
             br
-            button() For Today
+            button(id="fort") For Today
             br
-            button() The Ammity Affliction
+            button(id="tama") The Ammity Affliction
         h1 What is Brandon's favorite soda?
             br
-            button() Coke
+            button(id="coke") Coke
             br
-            button() Sprite
+            button(id="sprite") Sprite
             br
-            button() Mountain Dew
+            button(id="mountain") Mountain Dew
             br
             button(id="pepsi") Pepsi
