--- a/views/userView.pug
+++ b/views/userView.pug
@@ -14,16 +14,22 @@ hmtl
                 th Username
                 th Password
                 th User-Level
+                th Question 1 answer
+                th Question 2 answer
+                th Question 3 answer
                 each item in person
                     tr
                         td
                             a(href='/details/' + item.id) #{item.id}
-                        td #{item.name}
-                        td #{item.age}
-                        td #{item.email}
-                        td #{item.username}
-                        td #{item.password}
-                        td #{item.userLevel}
+                    td #{item.name}
+                    td #{item.age}
+                    td #{item.email}
+                    td #{item.username}
+                    td #{item.password}
+                    td #{item.userLevel}
+                    td #{item.answerQ1}
+                    td #{item.answerQ2}
+                    td #{item.answerQ3}
                         //- td #{item.answers}
                         td
                             a(href='/edit/' + item.id) Edit
