--- a/views/adminView.pug
+++ b/views/adminView.pug
@@ -4,7 +4,7 @@ html
         title= title
         link(href='/css/style.css', rel='stylesheet')
 
-    body content
+    body
         h3 List of People
 
         table(class='gridtable')
@@ -34,5 +34,5 @@ html
         p
         #menu
             a(href='/create') Add new person
-
-
+//-///////////////////////////////////////////////////////////////////
+//-The admins View
